# models/operations/getcontrolplanesidgroupmemberships.go
@@ -1,0 +1,77 @@
+// Code generated by Speakeasy (https://speakeasyapi.dev). DO NOT EDIT.
+
+package operations
+
+import (
+	"github.com/Kong/sdk-konnect-go/models/components"
+	"net/http"
+)
+
+type GetControlPlanesIDGroupMembershipsRequest struct {
+	// ID of a control plane group
+	ID string `pathParam:"style=simple,explode=false,name=id"`
+	// The maximum number of items to include per page. The last page of a collection may include fewer items.
+	PageSize *int64 `queryParam:"style=form,explode=true,name=page[size]"`
+	// Determines which page of the entities to retrieve.
+	PageNumber *int64 `queryParam:"style=form,explode=true,name=page[number]"`
+}
+
+func (o *GetControlPlanesIDGroupMembershipsRequest) GetID() string {
+	if o == nil {
+		return ""
+	}
+	return o.ID
+}
+
+func (o *GetControlPlanesIDGroupMembershipsRequest) GetPageSize() *int64 {
+	if o == nil {
+		return nil
+	}
+	return o.PageSize
+}
+
+func (o *GetControlPlanesIDGroupMembershipsRequest) GetPageNumber() *int64 {
+	if o == nil {
+		return nil
+	}
+	return o.PageNumber
+}
+
+type GetControlPlanesIDGroupMembershipsResponse struct {
+	// HTTP response content type for this operation
+	ContentType string
+	// HTTP response status code for this operation
+	StatusCode int
+	// Raw HTTP response; suitable for custom response parsing
+	RawResponse *http.Response
+	// A paginated list response for a collection of control plane group memberships.
+	ListGroupMemberships *components.ListGroupMemberships
+}
+
+func (o *GetControlPlanesIDGroupMembershipsResponse) GetContentType() string {
+	if o == nil {
+		return ""
+	}
+	return o.ContentType
+}
+
+func (o *GetControlPlanesIDGroupMembershipsResponse) GetStatusCode() int {
+	if o == nil {
+		return 0
+	}
+	return o.StatusCode
+}
+
+func (o *GetControlPlanesIDGroupMembershipsResponse) GetRawResponse() *http.Response {
+	if o == nil {
+		return nil
+	}
+	return o.RawResponse
+}
+
+func (o *GetControlPlanesIDGroupMembershipsResponse) GetListGroupMemberships() *components.ListGroupMemberships {
+	if o == nil {
+		return nil
+	}
+	return o.ListGroupMemberships
+}
