# models/operations/getcontrolplanesidgroupstatus.go
@@ -1,0 +1,59 @@
+// Code generated by Speakeasy (https://speakeasyapi.dev). DO NOT EDIT.
+
+package operations
+
+import (
+	"github.com/Kong/sdk-konnect-go/models/components"
+	"net/http"
+)
+
+type GetControlPlanesIDGroupStatusRequest struct {
+	// ID of a control plane group
+	ID string `pathParam:"style=simple,explode=false,name=id"`
+}
+
+func (o *GetControlPlanesIDGroupStatusRequest) GetID() string {
+	if o == nil {
+		return ""
+	}
+	return o.ID
+}
+
+type GetControlPlanesIDGroupStatusResponse struct {
+	// HTTP response content type for this operation
+	ContentType string
+	// HTTP response status code for this operation
+	StatusCode int
+	// Raw HTTP response; suitable for custom response parsing
+	RawResponse *http.Response
+	// Status of a control plane group, including existing conflicts.
+	GroupStatus *components.GroupStatus
+}
+
+func (o *GetControlPlanesIDGroupStatusResponse) GetContentType() string {
+	if o == nil {
+		return ""
+	}
+	return o.ContentType
+}
+
+func (o *GetControlPlanesIDGroupStatusResponse) GetStatusCode() int {
+	if o == nil {
+		return 0
+	}
+	return o.StatusCode
+}
+
+func (o *GetControlPlanesIDGroupStatusResponse) GetRawResponse() *http.Response {
+	if o == nil {
+		return nil
+	}
+	return o.RawResponse
+}
+
+func (o *GetControlPlanesIDGroupStatusResponse) GetGroupStatus() *components.GroupStatus {
+	if o == nil {
+		return nil
+	}
+	return o.GroupStatus
+}
