# openapi.yaml
@@ -13,6 +13,39 @@ servers:
   - url: https://au.api.konghq.com
 paths:
   /v2/control-planes:
+    get:
+      summary: List Control Planes
+      responses:
+        '200':
+          $ref: '#/components/responses/ListControlPlanesResponse'
+        '400':
+          $ref: '#/components/responses/ControlPlanesBadRequest'
+        '401':
+          $ref: '#/components/responses/ControlPlaneUnauthenticated'
+        '403':
+          $ref: '#/components/responses/ControlPlanePermissionDenied'
+        '503':
+          $ref: '#/components/responses/ServiceUnavailable'
+      operationId: list-control-planes
+      description: >-
+        Returns an array of control plane objects containing information about
+        the Konnect Control Planes.
+      parameters:
+        - $ref: '#/components/parameters/PageSize'
+        - $ref: '#/components/parameters/PageNumber'
+        - $ref: '#/components/parameters/FilterByNameEquality'
+        - $ref: '#/components/parameters/FilterByNameEqualityShort'
+        - $ref: '#/components/parameters/FilterByNameContains'
+        - $ref: '#/components/parameters/FilterByNameNotEquals'
+        - $ref: '#/components/parameters/FilterByIdEquality'
+        - $ref: '#/components/parameters/FilterByIdEqualityShort'
+        - $ref: '#/components/parameters/FilterByIdsEquality'
+        - $ref: '#/components/parameters/FilterByClusterTypeEquality'
+        - $ref: '#/components/parameters/FilterByClusterTypeEqualityShort'
+        - $ref: '#/components/parameters/FilterByClusterTypeNotEquals'
+        - $ref: '#/components/parameters/FilterByLabels'
+      tags:
+        - Control Planes
     parameters: []
     post:
       x-speakeasy-entity-operation: GatewayControlPlane#create
@@ -122,6 +155,65 @@ paths:
       description: Delete an individual control plane.
       tags:
         - Control Planes
+  /v2/control-planes/{id}/group-member-status:
+    parameters:
+      - schema:
+          type: string
+        name: id
+        in: path
+        required: true
+        description: ID of a control plane
+    get:
+      summary: Control Plane Group Member Status
+      operationId: get-control-planes-id-group-member-status
+      tags:
+        - Control Plane Groups
+      description: Determines the group membership status of a control plane.
+      responses:
+        '200':
+          $ref: '#/components/responses/GetGroupMemberStatus'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '503':
+          $ref: '#/components/responses/ServiceUnavailable'
+  /v2/control-planes/{id}/group-memberships:
+    parameters:
+      - schema:
+          type: string
+        name: id
+        in: path
+        required: true
+        description: ID of a control plane group
+    get:
+      summary: List Control Plane Group Memberships
+      tags:
+        - Control Plane Groups
+      responses:
+        '200':
+          $ref: '#/components/responses/ListGroupMemberships'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '503':
+          $ref: '#/components/responses/ServiceUnavailable'
+      operationId: get-control-planes-id-group-memberships
+      description: >-
+        Returns an array of control planes that are a member of this control
+        plane group.
+      parameters:
+        - $ref: '#/components/parameters/PageSize'
+        - $ref: '#/components/parameters/PageNumber'
   /v2/control-planes/{id}/group-memberships/add:
     parameters:
       - schema:
@@ -184,7 +276,165 @@ paths:
           $ref: '#/components/responses/NotFound'
         '503':
           $ref: '#/components/responses/ServiceUnavailable'
+  /v2/control-planes/{id}/group-status:
+    parameters:
+      - schema:
+          type: string
+        name: id
+        in: path
+        required: true
+        description: ID of a control plane group
+    get:
+      summary: Get Control Plane Group Status
+      tags:
+        - Control Plane Groups
+      responses:
+        '200':
+          $ref: '#/components/responses/GetGroupStatus'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '503':
+          $ref: '#/components/responses/ServiceUnavailable'
+      operationId: get-control-planes-id-group-status
+      description: >-
+        Returns the status of a control plane group, including existing
+        conflicts.
 components:
+  parameters:
+    FilterByLabels:
+      name: labels
+      description: Filter control planes in the response by associated labels.
+      in: query
+      required: false
+      schema:
+        type: string
+        example: key:value,existCheck
+    FilterByNameEquality:
+      name: filter[name][eq]
+      description: >-
+        Filter by direct equality comparison of the name property with a
+        supplied value.
+      in: query
+      required: false
+      schema:
+        type: string
+        example: test
+    FilterByNameEqualityShort:
+      name: filter[name]
+      description: >-
+        Filter by direct equality comparison (short-hand) of the name property
+        with a supplied value.
+      in: query
+      required: false
+      schema:
+        type: string
+        example: test
+    FilterByNameContains:
+      name: filter[name][contains]
+      description: >-
+        Filter by contains comparison of the name property with a supplied
+        substring.
+      in: query
+      required: false
+      schema:
+        type: string
+        example: test
+    FilterByNameNotEquals:
+      name: filter[name][neq]
+      description: >-
+        Filter by non-equality comparison of the name property with a supplied
+        value.
+      in: query
+      required: false
+      schema:
+        type: string
+        example: test
+    FilterByIdEquality:
+      name: filter[id][eq]
+      description: >-
+        Filter by direct equality comparison of the id property with a supplied
+        value.
+      in: query
+      required: false
+      schema:
+        type: string
+        example: 7f9fd312-a987-4628-b4c5-bb4f4fddd5f7
+    FilterByIdEqualityShort:
+      name: filter[id]
+      description: >-
+        Filter by direct equality comparison (short-hand) of the id property
+        with a supplied value.
+      in: query
+      required: false
+      schema:
+        type: string
+        example: 7f9fd312-a987-4628-b4c5-bb4f4fddd5f7
+    FilterByIdsEquality:
+      name: filter[id][oeq]
+      description: >-
+        Filter by direct equality comparison of id property with multiple
+        supplied values.
+      in: query
+      required: false
+      schema:
+        type: string
+        example: some-value,some-other-value
+    FilterByClusterTypeEquality:
+      name: filter[cluster_type][eq]
+      description: >-
+        Filter by direct equality comparison of the cluster_type property with a
+        supplied value.
+      in: query
+      required: false
+      schema:
+        type: string
+      example: CLUSTER_TYPE_CONTROL_PLANE
+    FilterByClusterTypeEqualityShort:
+      name: filter[cluster_type]
+      description: >-
+        Filter by direct equality comparison (short-hand) of the cluster_type
+        property with a supplied value.
+      in: query
+      required: false
+      schema:
+        type: string
+        example: CLUSTER_TYPE_CONTROL_PLANE
+    FilterByClusterTypeNotEquals:
+      name: filter[cluster_type][neq]
+      description: >-
+        Filter by non-equality comparison of the cluster_type property with a
+        supplied value.
+      in: query
+      required: false
+      schema:
+        type: string
+        example: test
+    PageSize:
+      name: page[size]
+      description: >-
+        The maximum number of items to include per page. The last page of a
+        collection may include fewer items.
+      required: false
+      in: query
+      allowEmptyValue: true
+      schema:
+        type: integer
+        example: 10
+    PageNumber:
+      name: page[number]
+      description: Determines which page of the entities to retrieve.
+      required: false
+      in: query
+      allowEmptyValue: true
+      schema:
+        type: integer
+        example: 1
   responses:
     RetrieveControlPlaneResponse:
       description: A response to retrieving a single control plane.
@@ -204,6 +454,24 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/ControlPlane'
+    ListControlPlanesResponse:
+      description: A paginated list response for a collection of control planes.
+      content:
+        application/json:
+          schema:
+            title: ListControlPlanesResponse
+            type: object
+            additionalProperties: false
+            properties:
+              meta:
+                $ref: '#/components/schemas/PaginatedMeta'
+              data:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ControlPlane'
+            required:
+              - meta
+              - data
     ControlPlanesBadRequest:
       description: Bad Request
       content:
@@ -300,6 +568,36 @@ components:
               - status
               - title
               - instance
+    ListGroupMemberships:
+      description: >-
+        A paginated list response for a collection of control plane group
+        memberships.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              meta:
+                $ref: '#/components/schemas/PaginatedMeta'
+              data:
+                type: array
+                description: >-
+                  Array of control planes summary who are a child to this
+                  control plane group.
+                items:
+                  $ref: '#/components/schemas/ControlPlaneSummary'
+    GetGroupStatus:
+      description: Status of a control plane group, including existing conflicts.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/GroupStatus'
+    GetGroupMemberStatus:
+      description: Determines the group membership status of a control plane.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/GroupMemberStatus'
     BadRequest:
       description: Bad Request
       content:
@@ -533,6 +831,106 @@ components:
         updated_at:
           type: string
           format: date-time
+    GroupStatus:
+      title: GroupStatus
+      type: object
+      description: >-
+        The Group Status object contains information about the status of a
+        control plane group.
+      properties:
+        id:
+          type: string
+          format: uuid
+          example: 7f9fd312-a987-4628-b4c5-bb4f4fddd5f7
+          description: The control plane group ID.
+          readOnly: true
+        created_at:
+          type: string
+          format: date-time
+          example: '2022-11-04T20:10:06.927Z'
+          description: >-
+            An ISO-8604 timestamp representation of control plane group status
+            creation date.
+          readOnly: true
+        updated_at:
+          type: string
+          format: date-time
+          example: '2022-11-04T20:10:06.927Z'
+          description: >-
+            An ISO-8604 timestamp representation of control plane group status
+            update date.
+          readOnly: true
+        conflicts:
+          type: array
+          maxItems: 256
+          items:
+            $ref: '#/components/schemas/GroupConflict'
+        state:
+          type: string
+          description: The state of the control plane group.
+          example: CONFLICT
+          readOnly: true
+          enum:
+            - OK
+            - CONFLICT
+            - UNKNOWN
+    GroupConflict:
+      title: GroupConflict
+      type: object
+      description: >-
+        The Group Conflict object contains information about a conflict in a
+        control plane group.
+      properties:
+        cluster_id:
+          type: string
+          format: uuid
+          example: 7f9fd312-a987-4628-b4c5-bb4f4fddd5f7
+          description: The ID of a control plane member of a control plane group.
+          readOnly: true
+        description:
+          type: string
+          example: >-
+            conflicting entity found: ID=38d790ad-8b08-4ff5-a074-2e1e9e64d8bd,
+            Name=foo
+          description: The description of the conflict.
+          readOnly: true
+        resource:
+          $ref: '#/components/schemas/GroupConflictResource'
+    GroupConflictResource:
+      title: GroupConflictResource
+      type: object
+      description: A resource causing a conflict in a control plane group.
+      properties:
+        id:
+          type: string
+          format: uuid
+          example: 7f9fd312-a987-4628-b4c5-bb4f4fddd5f7
+          description: The ID of the resource.
+          readOnly: true
+        type:
+          type: string
+          example: service
+          description: The type of the resource.
+          readOnly: true
+      required:
+        - id
+        - type
+    GroupMemberStatus:
+      title: GroupMemberStatus
+      type: object
+      description: >-
+        Object with information determining the group membership status of a
+        control plane.
+      properties:
+        is_member:
+          type: boolean
+          example: true
+          description: >-
+            Boolean indicating if a control plane is a member of a control plane
+            group.
+          readOnly: true
+      required:
+        - is_member
     Labels:
       title: Labels
       type: object
@@ -584,6 +982,34 @@ components:
         - host: example.com
           port: 443
           protocol: https
+    PageMeta:
+      type: object
+      description: >-
+        Contains pagination query parameters and the total number of objects
+        returned.
+      required:
+        - number
+        - size
+        - total
+      properties:
+        number:
+          type: number
+          example: 1
+        size:
+          type: number
+          example: 10
+        total:
+          type: number
+          example: 100
+    PaginatedMeta:
+      type: object
+      title: PaginatedMeta
+      description: returns the pagination information
+      properties:
+        page:
+          $ref: '#/components/schemas/PageMeta'
+      required:
+        - page
     BaseError:
       type: object
       title: Error
